--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm install
       - run: npm run build  
       
-      - uses: w9jds/firebase-action@main
+      - uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env: 
